@@ -1586,15 +1586,20 @@ proc check_effective_target_tbb-backend { } {
     # Set up and preprocess a C++ test program that depends
     # on tbb
     set src tbb_backend[pid].cc
-
+    set exe tbb_backend[pid].x
+    
     set f [open $src "w"]
     puts $f "#include <tbb/tbb.h>"
     puts $f "#if TBB_INTERFACE_VERSION < 10000"
     puts $f "#  error Intel(R) Threading Building Blocks 2018 is required; older versions are not supported."
     puts $f "#endif"
+    puts $f "int main ()"
+    puts $f "{"
+    puts $f "  return 0;"
+    puts $f "}"
     close $f
     
-    set lines [v3_target_compile $src /dev/null preprocess ""]
+    set lines [v3_target_compile $src $exe executable "-ltbb"]
     file delete $src
 
     if [string match "" $lines] {
